--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -71,7 +71,7 @@ the generated data.
 
 #### Recommended Use
 
-1. You identify a new intent while reviewing conversations in your NLU inbox.
+1. While reviewing conversations from your users in [Rasa X](https://rasa.com/docs/rasa-x/), you identify the need for a new intent. 
 2. You want to add this intent to your bot, but you don't have enough real user
 messages yet.
 3. You generate a small amount of paraphrases for the existing real user messages
