--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -81,7 +81,7 @@ the performance impact of adding the generated data to your model.
 5. Once you are happy with the results, you store the additional generated data
 in a spearate file, e.g. `synthetic.yml`.
 6. As more and more users express this intent, you collect more real user messages
-7. You delete `synthetic.yml`.
+7. When you have enough training data from real user messages, you delete the `synthetic.yml` file.
 
 
 ### Share with Test Users Early
