--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -74,7 +74,7 @@ the generated data.
 1. While reviewing conversations from your users in [Rasa X](https://rasa.com/docs/rasa-x/), you identify the need for a new intent. 
 2. You want to add this intent to your bot, but you don't have enough real user
 messages yet.
-3. You generate a small amount of paraphrases for the existing real user messages
+3. You generate a small amount of paraphrases from the existing real user messages
 with the paraphraser from [https://github.com/RasaHQ/paraphraser](https://github.com/RasaHQ/paraphraser).
 4. You use the data augmentation CLI tool (`rasa data augment nlu`) to evaluate
 the performance impact of adding the generated data to your model.
