--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -80,7 +80,8 @@ with the paraphraser from [https://github.com/RasaHQ/paraphraser](https://github
 the performance impact of adding the generated data to your model.
 5. Once you are happy with the results, you store the additional generated data
 in a spearate file, e.g. `synthetic.yml`.
-6. As more and more users express this intent, you collect more real user messages
+6. Once you have put this intent live, and more and more users express this intent, you annotate more
+real user messages for it.
 7. When you have enough training data from real user messages, you delete the `synthetic.yml` file.
 
 
