moved notes to after recommended use section

--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -91,6 +91,12 @@ you annotate more real user messages for it.
 8. When you have enough training data from real user messages, you delete the
 `synthetic.yml` file.
 
+::: note
+Always prefer data from real users over automatically generated ones.
+
+Automatically generated data can be noisy, we recommend to always
+manually check any generated paraphrases.
+:::
 
 ### Share with Test Users Early
 
