--- a/docs/docs/command-line-interface.mdx
+++ b/docs/docs/command-line-interface.mdx
@@ -440,10 +440,8 @@ models using the following arguments:
 ```text [rasa data augment nlu --help]
 ```
 
-Data augmentation is one strategy that can help produce more training data for intents that currently have little data,
-are frequently confused, or exhibit low performance in general. Our data augmentation strategy works by feeding the
-generated paraphrases and then evaluating whether adding a subset of these can improve intent classification
-performance.
+Our data augmentation strategy works by feeding the generated paraphrases and then evaluating whether adding a subset
+of these can improve intent classification performance.
 
 We are evaluating two strategies for selecting paraphrases, firstly by simply randomly choosing a subset of paraphrases,
 and secondly, by maximising vocabulary expansion, i.e. preferring paraphrases that add new words to a given intent.
