--- a/docs/docs/command-line-interface.mdx
+++ b/docs/docs/command-line-interface.mdx
@@ -482,10 +482,9 @@ vector respresentations of your paraphrases.
 
 :::
 
-:::note
 Data augmentation does **not** affect entity recognition performance. We furthermore recommend to either remove entity
-annotations during NLU training or to disable the enitity recognition option in the `DIETClassifier` config.
-:::
+annotations during NLU training or to disable the enitity recognition option in the
+[DIETClassifier](./components.mdx#dietclassifier) config.
 
 :::caution check results
 While data augmentation can substantially improve performance for some intents (and therefore also overall NLU
