--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -81,7 +81,7 @@ messages yet.
 with the paraphraser from [https://github.com/RasaHQ/paraphraser](https://github.com/RasaHQ/paraphraser).
 4. You manually inspect the generated paraphrases and discard the ones that do not
 express the new intent.
-5. You use the data augmentation [CLI tool](./command-line-interface.mdx)
+5. You use the data augmentation [CLI tool](./command-line-interface.mdx#)
 (`rasa data augment nlu`) to evaluate the performance impact of adding the generated
 data to your model.
 6. Once you are happy with the results, you store the additional generated data
