--- a/docs/docs/event-brokers.mdx
+++ b/docs/docs/event-brokers.mdx
@@ -87,17 +87,18 @@ import pika
 def _callback(ch, method, properties, body):
         # Do something useful with your incoming message body here, e.g.
         # saving it to a database
-        print('Received event {}'.format(json.loads(body)))
+        print("Received event {}".format(json.loads(body)))
 
-if __name__ == '__main__':
+if __name__ == "__main__":
 
     # RabbitMQ credentials with username and password
-    credentials = pika.PlainCredentials('username', 'password')
+    credentials = pika.PlainCredentials("username", "password")
 
     # Pika connection to the RabbitMQ host - typically 'rabbit' in a
     # docker environment, or 'localhost' in a local environment
     connection = pika.BlockingConnection(
-        pika.ConnectionParameters('rabbit', credentials=credentials))
+        pika.ConnectionParameters("rabbit", credentials=credentials)
+    )
 
     # start consumption of channel
     channel = connection.channel()
