--- a/changelog/7005.bugfix.md
+++ b/changelog/7005.bugfix.md
@@ -1,1 +1,1 @@
-Add encoding ´utf-8´ to write_dot funcion
+Fixed a bug for plotting trackers with non-ascii texts during interactive training by enforcing utf-8 encoding
