more user friendly changelog

--- a/changelog/8498.removal.md
+++ b/changelog/8498.removal.md
@@ -1,1 +1,2 @@
-Update MINIMUM_COMPATIBLE_VERSION to "2.6.0".
+Update the minimum compatible model version to "2.6.0".
+This means all models trained with an earlier version will have to be retrained.
