Added test cases and updated event broker docs

--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,47 @@ https://github.com/RasaHQ/rasa/tree/main/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [major.minor.patch] - 2021-05-13
+                                   
+
+### Deprecations and Removals
+- [#261](https://github.com/rasahq/rasa/issues/261): In forms, the keyword `required_slots` should always precede the definition of slot mappings and the lack of it is deprecated.
+  Please see the [migration guide](migration-guide.mdx) for more information.
+- [#8428](https://github.com/rasahq/rasa/issues/8428): `rasa.data.get_test_directory`, `rasa.data.get_core_nlu_directories`, and
+  `rasa.shared.nlu.training_data.training_data.TrainingData::get_core_nlu_directories`
+  are deprecated and will be removed in Rasa Open Source 3.0.0.
+
+### Features
+- [#8685](https://github.com/rasahq/rasa/issues/8685): Added `sasl_mechanism`, `sasl_kerberos_domain_name`, and `sasl_kerberos_service_name` as optional configurable parameters for the Kafka Producer.
+
+### Improvements
+- [#261](https://github.com/rasahq/rasa/issues/261): Added an optional `ignored_intents` parameter in forms.
+
+  - To use it, add the `ignored_intents` parameter  in your `domain.yml` file after the forms name and provide a list of intents to ignore. Please see [Forms](forms.mdx) for more information.
+  - This can be used in case the user never wants to fill any slots of a form with the specified intent, e.g. chitchat.
+- [#7589](https://github.com/rasahq/rasa/issues/7589): Improved the machine learning models' codebase by factoring out shared feature-processing
+  logic into three custom layer classes:
+  - `ConcatenateSparseDenseFeatures` combines multiple sparse and dense feature tensors
+  into one.
+  - `RasaFeatureCombiningLayer` additionally combines sequence-level and sentence-level
+  features.
+  - `RasaSequenceLayer` is used for attributes with sequence-level features; it
+  additionally embeds the combined features with a transformer and facilitates masked
+  language modeling.
+- [#7685](https://github.com/rasahq/rasa/issues/7685): Added the following usability improvements with respect to entities getting extracted multiple times:
+  * Added warnings for competing entity extractors at training time and for overlapping entities at inference time
+  * Improved docs to help users handle overlapping entity problems.
+- [#8074](https://github.com/rasahq/rasa/issues/8074): Rasa test now prints a warning if the test stories contain bot utterances that are not part of the domain.
+- [#8263](https://github.com/rasahq/rasa/issues/8263): Updated `asyncio.Task.all_tasks` to `asyncio.all_tasks`, with a fallback for python 3.6, which raises an AttributeError for `asyncio.all_tasks`. This removes the deprecation warning for the `Task.all_tasks` usage.
+
+### Bugfixes
+- [#7589](https://github.com/rasahq/rasa/issues/7589): Fix masked language modeling in DIET to only apply masking to token-level
+  (sequence-level) features. Previously, masking was applied to both token-level and
+  sentence-level features.
+- [#8300](https://github.com/rasahq/rasa/issues/8300): Make it possible to use `null` entities in stories.
+- [#8333](https://github.com/rasahq/rasa/issues/8333): Introduce a `skip_validation` flag in order to speed up reading YAML files that were already validated.
+
+
 ## [2.5.0] - 2021-04-12
                        
 
