--- a/docs/docs/event-brokers.mdx
+++ b/docs/docs/event-brokers.mdx
@@ -148,6 +148,14 @@ and client authentication. After generating valid certificates for the brokers a
 clients, the path to the certificate and key generated for the producer must
 be provided as arguments, as well as the CA's root certificate.
 
+When using the `SASL_PLAINTEXT` and `SASL_SSL` protocols, the `sasl_mechanism` can be
+optionally configured and is set to `PLAIN` by default. Valid values for `sasl_mechanism`
+are: `PLAIN`, `GSSAPI`, `OAUTHBEARER`, `SCRAM-SHA-256`, and `SCRAM-SHA-512`.
+
+If `GSSAPI` is used as the `sasl_mechanism`, the `sasl_kerberos_service_name` and
+`sasl_kerberos_domain_name` can be optionally configured. By default,
+`sasl_kerberos_service_name` is set to `kafka`.
+
 If the `ssl_check_hostname` parameter is enabled, the clients will verify
 if the broker's hostname matches the certificate. It's used on client's connections
 and inter-broker connections to prevent man-in-the-middle attacks.
@@ -176,6 +184,7 @@ If using the `SASL_SSL` protocol, the endpoints file should look like:
 
 ```yaml-rasa (docs/sources/data/test_endpoints/event_brokers/kafka_sasl_ssl_endpoint.yml)
 ```
+
 
 ## SQL Event Broker
 
