--- a/changelog/8649.bugfix.md
+++ b/changelog/8649.bugfix.md
@@ -1,1 +1,1 @@
-Updated python-engineio version for compatibility with python-socketio
+Updated `python-engineio` dependency version for compatibility with `python-socketio`.
