--- a/changelog/8812.bugfix.md
+++ b/changelog/8812.bugfix.md
@@ -1,1 +1,3 @@
-Catch exception in `plot_paired_histogram` when data is empty.
+Don't evaluate entities if no entities present in test data.
+
+Also, catch exception in `plot_paired_histogram` when data is empty.
