--- a/changelog/8750.improvement.md
+++ b/changelog/8750.improvement.md
@@ -1,1 +1,1 @@
-Changed ``DietClassifier`` class so that we are able to persist and load sparse feature sizes. This will be helpful for incremental training.
+Changed `DietClassifier` class so that we are able to persist and load sparse feature sizes. This will be helpful for incremental training.
