Placeholder for form fallback.

--- a/docs/docs/fallback-handoff.mdx
+++ b/docs/docs/fallback-handoff.mdx
@@ -336,6 +336,9 @@ class ActionDefaultFallback(Action):
     so that your bot can apply its rules or memorized stories to correctly predict the next action.
   :::
 
+### Fallback in Forms
+
+
 
 ## Human Handoff
 
