--- a/changelog/8876.feature.rst
+++ b/changelog/8876.feature.rst
@@ -1,1 +1,1 @@
-Added ``sasl_mechanism`` as an optional configurable parameter for the ``KafkaEventBroker``. 
+Added ``sasl_mechanism`` as an optional configurable parameter for the :ref:`event-brokers-kafka`. 
