--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,13 @@ https://github.com/RasaHQ/rasa/tree/main/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [2.5.2] - 2021-06-16
+                       
+
+### Features
+- [#8892](https://github.com/rasahq/rasa/issues/8892): Added `sasl_mechanism` as an optional configurable parameters for the [Kafka Producer](event-brokers.mdx#kafka-event-broker).
+
+
 ## [2.5.1] - 2021-04-28
                        
 
